--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0021.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0021.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0021.png">
-      <!--<div class="ocr_carea" title="bbox 168 162 1956 3186">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 920 170 1927 207">
         <span id="w_0" class="ocr_word" title="bbox 920 172 1186 207">
           <span class="alternatives">
@@ -25,8 +23,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 717 290 1398 336">
         <span id="w_2" class="ocr_word" title="bbox 717 291 787 336">
           <span class="alternatives">
@@ -47,8 +43,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 301 372 1929 430">
         <span id="w_5" class="ocr_word" title="bbox 301 377 483 422">
           <span class="alternatives">
@@ -558,7 +552,7 @@
         </span>
         <span id="w_87" class="ocr_word" title="bbox 1685 873 1930 930">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">dif^cultas,</ins>
+            <ins title="nlp 2.00">difficultas,</ins>
           </span>
         </span>
       </span>
@@ -787,17 +781,11 @@
         </span>
         <span id="w_124" class="ocr_word" title="bbox 1829 1175 1932 1216">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quo-</ins>
+            <ins title="nlp 2.00">quoque</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 188 1232 1933 1291">
-        <span id="w_125" class="ocr_word" title="bbox 188 1249 269 1291">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">que</ins>
-            <del title="nlp 0.90">quoque</del>
-          </span>
-        </span>
         <span id="w_126" class="ocr_word" title="bbox 301 1234 557 1277">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">monendum</ins>
@@ -848,17 +836,11 @@
         </span>
         <span id="w_134" class="ocr_word" title="bbox 1801 1246 1933 1275">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">enun-</ins>
+            <ins title="nlp 2.00">enuntiato</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 187 1302 1931 1361">
-        <span id="w_135" class="ocr_word" title="bbox 187 1306 294 1349">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tiato</ins>
-            <del title="nlp 0.90">enuntiato</del>
-          </span>
-        </span>
         <span id="w_136" class="ocr_word" title="bbox 328 1320 405 1348">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">sua</ins>
@@ -965,17 +947,11 @@
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1776 1375 1934 1419">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">medio-</ins>
+            <ins title="nlp 2.00">mediocriter</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 188 1447 1931 1506">
-        <span id="w_154" class="ocr_word" title="bbox 188 1450 317 1493">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">criter</ins>
-            <del title="nlp 0.90">mediocriter</del>
-          </span>
-        </span>
         <span id="w_155" class="ocr_word" title="bbox 348 1450 408 1492">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">rei</ins>
@@ -1026,7 +1002,7 @@
         </span>
         <span id="w_163" class="ocr_word" title="bbox 1685 1447 1931 1506">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">lectorem*)</ins>
+            <ins title="nlp 2.00">lectorem1)</ins>
           </span>
         </span>
       </span>
@@ -1056,8 +1032,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 889 1650 1231 1695">
         <span id="w_168" class="ocr_word" title="bbox 889 1651 960 1695">
           <span class="alternatives">
@@ -1072,8 +1046,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 306 1733 1935 1796">
         <span id="w_170" class="ocr_word" title="bbox 306 1736 446 1796">
           <span class="alternatives">
@@ -1081,9 +1053,9 @@
             <del title="nlp 0.90">Pergo</del>
           </span>
         </span>
-        <span id="w_171" class="ocr_word" title="bbox 478 1735 531 1780" xml:lang="grc">
+        <span id="w_171" class="ocr_word" title="bbox 478 1735 531 1780" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">8δ</ins>
+            <ins title="nlp 2.00">ad</ins>
           </span>
         </span>
         <span id="w_172" class="ocr_word" title="bbox 564 1734 813 1779">
@@ -1124,16 +1096,11 @@
         </span>
         <span id="w_178" class="ocr_word" title="bbox 1809 1733 1935 1791">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„Epi-</ins>
+            <ins title="nlp 2.00">,,Epicureis''</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 190 1806 1934 1864">
-        <span id="w_179" class="ocr_word" title="bbox 190 1809 353 1854">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">cureis"</ins>
-          </span>
-        </span>
         <span id="w_180" class="ocr_word" title="bbox 378 1808 637 1852">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">examiuavit</ins>
@@ -1252,17 +1219,11 @@
         </span>
         <span id="w_199" class="ocr_word" title="bbox 1824 1877 1934 1920">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ideo-</ins>
+            <ins title="nlp 2.00">ideoque</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 191 1949 1936 2010">
-        <span id="w_200" class="ocr_word" title="bbox 191 1968 272 2010">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">que</ins>
-            <del title="nlp 0.90">ideoque</del>
-          </span>
-        </span>
         <span id="w_201" class="ocr_word" title="bbox 311 1968 336 1995">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">a</ins>
@@ -1499,17 +1460,11 @@
         </span>
         <span id="w_239" class="ocr_word" title="bbox 1773 2164 1937 2208">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Stoico-</ins>
+            <ins title="nlp 2.00">Stoicorum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 191 2237 1937 2297">
-        <span id="w_240" class="ocr_word" title="bbox 191 2256 287 2284">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rum</ins>
-            <del title="nlp 0.90">Stoicorum</del>
-          </span>
-        </span>
         <span id="w_241" class="ocr_word" title="bbox 318 2241 575 2297">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">placitorum</ins>
@@ -1610,17 +1565,11 @@
         </span>
         <span id="w_257" class="ocr_word" title="bbox 1716 2309 1938 2352">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Academi-</ins>
+            <ins title="nlp 2.00">Academicum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 193 2380 1938 2438">
-        <span id="w_258" class="ocr_word" title="bbox 193 2399 289 2427">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cum</ins>
-            <del title="nlp 0.90">Academicum</del>
-          </span>
-        </span>
         <span id="w_259" class="ocr_word" title="bbox 322 2384 444 2426">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">illum</ins>
@@ -1671,17 +1620,11 @@
         </span>
         <span id="w_267" class="ocr_word" title="bbox 1824 2380 1938 2423">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">deni-</ins>
+            <ins title="nlp 2.00">denique</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 196 2452 1937 2511">
-        <span id="w_268" class="ocr_word" title="bbox 196 2471 275 2511">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">que</ins>
-            <del title="nlp 0.90">denique</del>
-          </span>
-        </span>
         <span id="w_269" class="ocr_word" title="bbox 308 2454 548 2511">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Chrysippo</ins>
@@ -1924,17 +1867,11 @@
         </span>
         <span id="w_308" class="ocr_word" title="bbox 1833 2668 1939 2712">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aca-</ins>
+            <ins title="nlp 2.00">Academicus,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 195 2739 1938 2799">
-        <span id="w_309" class="ocr_word" title="bbox 195 2742 396 2799">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">demicus,</ins>
-            <del title="nlp 0.90">Academicus,</del>
-          </span>
-        </span>
         <span id="w_310" class="ocr_word" title="bbox 434 2740 582 2784">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">deiude</ins>
@@ -1978,8 +1915,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 316 2876 1939 2924">
         <span id="w_317" class="ocr_word" title="bbox 316 2879 350 2924">
           <span class="alternatives">
@@ -2116,17 +2051,11 @@
         </span>
         <span id="w_339" class="ocr_word" title="bbox 1879 2940 1939 2965">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ez-</ins>
+            <ins title="nlp 2.00">excerpta</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 197 2983 1939 3031">
-        <span id="w_340" class="ocr_word" title="bbox 197 2988 326 3031">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cerpta</ins>
-            <del title="nlp 0.90">ezcerpta</del>
-          </span>
-        </span>
         <span id="w_341" class="ocr_word" title="bbox 350 2985 502 3021">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">contuli.</ins>
@@ -2263,17 +2192,11 @@
         </span>
         <span id="w_363" class="ocr_word" title="bbox 1802 3037 1940 3073">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Wend-</ins>
+            <ins title="nlp 2.00">Wendlandio</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 197 3091 1939 3137">
-        <span id="w_364" class="ocr_word" title="bbox 197 3093 324 3129">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">landio</ins>
-            <del title="nlp 0.90">Wendlandio</del>
-          </span>
-        </span>
         <span id="w_365" class="ocr_word" title="bbox 349 3093 494 3128">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">editum</ins>
@@ -2346,16 +2269,11 @@
             <del title="nlp 0.90">laudi</del>
           </span>
         </span>
-        <span id="w_377" class="ocr_word" title="bbox 1884 3092 1939 3126">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">in-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 199 3146 539 3182">
         <span id="w_378" class="ocr_word" title="bbox 199 3147 295 3182">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">vitu«</ins>
+            <ins title="nlp 2.00">invitus</ins>
           </span>
         </span>
         <span id="w_379" class="ocr_word" title="bbox 323 3146 539 3182">
@@ -2365,8 +2283,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
