--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0029.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0029.html
@@ -17,8 +17,7 @@
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1844 129 1979 167">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XXVII</ins>
-            <del title="nlp 0.90">XXVII</del>
+            <ins title="nlp 2.00">XXVII</ins>
           </span>
         </span>
       </span>
@@ -37,8 +36,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 503 255 761 298">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">niagnopere</ins>
-            <del title="nlp 0.90">niagnopere</del>
+            <ins title="nlp 2.00">magnopere</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 793 240 908 283" lang="grc">
@@ -103,8 +101,7 @@
         </span>
         <span id="w_16" class="ocr_word" title="bbox 1102 312 1266 355">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nuUum</ins>
-            <del title="nlp 0.90">nuUum</del>
+            <ins title="nlp 2.00">nullum</ins>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1301 314 1439 354">
@@ -244,17 +241,7 @@
         </span>
         <span id="w_41" class="ocr_word" title="bbox 488 527 536 569">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">11</ins>
-          </span>
-        </span>
-        <span id="w_42" class="ocr_word" title="bbox 545 551 597 558">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_43" class="ocr_word" title="bbox 602 526 658 569">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">33</ins>
+            <ins class="alt" title="nlp 2.00">11—33</ins>
           </span>
         </span>
         <span id="w_44" class="ocr_word" title="bbox 691 541 814 569">
@@ -283,8 +270,7 @@
         </span>
         <span id="w_48" class="ocr_word" title="bbox 1359 526 1536 580">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fonteni,</ins>
-            <del title="nlp 0.90">fonteni,</del>
+            <ins title="nlp 2.00">fontem,</ins>
           </span>
         </span>
         <span id="w_49" class="ocr_word" title="bbox 1567 526 1681 581">
@@ -336,9 +322,14 @@
             <del title="nlp 0.90">et</del>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 1029 599 1224 641">
+        <span id="w_57_0" class="ocr_word" title="bbox 1029 599 1224 641">
           <span class="alternatives">
-            <ins title="nlp 2.00">cursum"</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_57_1" class="ocr_word" title="bbox 1029 599 1224 641">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">cursum“</ins>
           </span>
         </span>
         <span id="w_58" class="ocr_word" title="bbox 1252 598 1467 653">
@@ -353,11 +344,6 @@
             <del title="nlp 0.90">disputationis</del>
           </span>
         </span>
-        <span id="w_60" class="ocr_word" title="bbox 1835 598 1979 640">
-          <span class="alternatives">
-            <ins title="nlp 2.00">distinguit</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 235 667 1979 726">
         <span id="w_62" class="ocr_word" title="bbox 360 686 383 712">
@@ -366,9 +352,14 @@
             <del title="nlp 0.90">a</del>
           </span>
         </span>
-        <span id="w_63" class="ocr_word" title="bbox 414 670 698 725">
+        <span id="w_63_0" class="ocr_word" title="bbox 414 670 698 725">
           <span class="alternatives">
-            <ins title="nlp 2.00">,, scrupulosis</ins>
+            <ins class="alt" title="nlp 2.00">,,scrupulosis</ins>
+          </span>
+        </span>
+        <span id="w_63_1" class="ocr_word" title="bbox 414 670 698 725">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">cotibus“</ins>
           </span>
         </span>
         <span id="w_65" class="ocr_word" title="bbox 953 669 1293 712">
@@ -556,9 +547,14 @@
             <del title="nlp 0.90">de</del>
           </span>
         </span>
-        <span id="w_96" class="ocr_word" title="bbox 919 884 1263 940">
+        <span id="w_96_0" class="ocr_word" title="bbox 919 884 1263 940">
           <span class="alternatives">
-            <ins title="nlp 2.00">„magnitudine"</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_96_1" class="ocr_word" title="bbox 919 884 1263 940">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">,,magnitudine“</ins>
           </span>
         </span>
         <span id="w_97" class="ocr_word" title="bbox 1295 884 1396 925">
@@ -583,12 +579,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">opinati,</ins>
             <del title="nlp 0.90">opinati,</del>
-          </span>
-        </span>
-        <span id="w_101" class="ocr_word" title="bbox 1893 883 1984 925">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sine</ins>
-            <del title="nlp 0.90">sine</del>
           </span>
         </span>
       </span>
@@ -896,8 +886,7 @@
         </span>
         <span id="w_154" class="ocr_word" title="bbox 448 1311 688 1369">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Chrjsippo</ins>
-            <del title="nlp 0.90">Chrjsippo</del>
+            <ins title="nlp 2.00">Chrysippo</ins>
           </span>
         </span>
         <span id="w_155" class="ocr_word" title="bbox 721 1314 857 1356">
@@ -981,17 +970,7 @@
         </span>
         <span id="w_168" class="ocr_word" title="bbox 695 1385 743 1427">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">11</ins>
-          </span>
-        </span>
-        <span id="w_169" class="ocr_word" title="bbox 754 1411 806 1415">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_170" class="ocr_word" title="bbox 811 1385 867 1426">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">33</ins>
+            <ins class="alt" title="nlp 2.00">11—33</ins>
           </span>
         </span>
         <span id="w_171" class="ocr_word" title="bbox 894 1385 1100 1427">
@@ -1360,8 +1339,7 @@
         </span>
         <span id="w_232" class="ocr_word" title="bbox 1478 1814 1668 1857">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TuUium</ins>
-            <del title="nlp 0.90">TuUium</del>
+            <ins title="nlp 2.00">Tullium</ins>
           </span>
         </span>
         <span id="w_233" class="ocr_word" title="bbox 1700 1829 1725 1856">
@@ -1372,8 +1350,7 @@
         </span>
         <span id="w_234" class="ocr_word" title="bbox 1757 1812 1985 1870">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Chrjsippi</ins>
-            <del title="nlp 0.90">Chrjsippi</del>
+            <ins title="nlp 2.00">Chrysippi</ins>
           </span>
         </span>
       </span>
@@ -1578,9 +1555,14 @@
             <del title="nlp 0.90">a</del>
           </span>
         </span>
-        <span id="w_269" class="ocr_word" title="bbox 1304 2101 1569 2157">
+        <span id="w_269_0" class="ocr_word" title="bbox 1304 2101 1569 2157">
           <span class="alternatives">
-            <ins title="nlp 2.00">Chrysippo"</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_269_1" class="ocr_word" title="bbox 1304 2101 1569 2157">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Chrysippo“</ins>
           </span>
         </span>
         <span id="w_270" class="ocr_word" title="bbox 1614 2104 1656 2144">
@@ -1597,11 +1579,6 @@
         <span id="w_272" class="ocr_word" title="bbox 1739 2100 1797 2143" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">30</ins>
-          </span>
-        </span>
-        <span id="w_273" class="ocr_word" title="bbox 1832 2115 1985 2157">
-          <span class="alternatives">
-            <ins title="nlp 2.00">„quam</ins>
           </span>
         </span>
       </span>
@@ -1656,9 +1633,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 235 2243 1985 2302">
-        <span id="w_282" class="ocr_word" title="bbox 235 2244 509 2299">
+        <span id="w_282_0" class="ocr_word" title="bbox 235 2244 509 2299">
           <span class="alternatives">
-            <ins title="nlp 2.00">praeceptis.“</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_282_1" class="ocr_word" title="bbox 235 2244 509 2299">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">praeceptis.“</ins>
           </span>
         </span>
         <span id="w_283" class="ocr_word" title="bbox 569 2243 759 2299">
@@ -1709,11 +1691,6 @@
             <del title="nlp 0.90">et</del>
           </span>
         </span>
-        <span id="w_291" class="ocr_word" title="bbox 1685 2245 1985 2302">
-          <span class="alternatives">
-            <ins title="nlp 2.00">aegrotationibus</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 236 2315 1986 2373">
         <span id="w_293" class="ocr_word" title="bbox 346 2317 399 2369">
@@ -1723,17 +1700,7 @@
         </span>
         <span id="w_294" class="ocr_word" title="bbox 424 2315 481 2358">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">23</ins>
-          </span>
-        </span>
-        <span id="w_295" class="ocr_word" title="bbox 486 2341 540 2346">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_296" class="ocr_word" title="bbox 543 2315 599 2358">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">32</ins>
+            <ins class="alt" title="nlp 2.00">23—32</ins>
           </span>
         </span>
         <span id="w_297" class="ocr_word" title="bbox 645 2316 935 2373">
@@ -2086,8 +2053,7 @@
         </span>
         <span id="w_355" class="ocr_word" title="bbox 1117 2676 1261 2717">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">omuia</ins>
-            <del title="nlp 0.90">omuia</del>
+            <ins title="nlp 2.00">omnia</ins>
           </span>
         </span>
         <span id="w_356" class="ocr_word" title="bbox 1300 2691 1349 2718">
@@ -2297,8 +2263,7 @@
         </span>
         <span id="w_389" class="ocr_word" title="bbox 1358 2963 1572 3005">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertiani</ins>
-            <del title="nlp 0.90">Laertiani</del>
+            <ins title="nlp 2.00">Laërtiani</ins>
           </span>
         </span>
         <span id="w_390" class="ocr_word" title="bbox 1602 2962 1845 3017">
@@ -2314,12 +2279,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 238 3031 1985 3090">
-        <span id="w_392" class="ocr_word" title="bbox 238 3031 387 3088">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">litudo,</ins>
-            <del title="nlp 0.90">similitudo,</del>
-          </span>
-        </span>
         <span id="w_393" class="ocr_word" title="bbox 430 3036 641 3088">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">repugnat</ins>
@@ -2349,23 +2308,21 @@
             <del title="nlp 0.90">et</del>
           </span>
         </span>
-        <span id="w_398" class="ocr_word" title="bbox 1365 3034 1694 3090">
+        <span id="w_398_0" class="ocr_word" title="bbox 1365 3034 1694 3090">
           <span class="alternatives">
-            <ins title="nlp 2.00">aegrotationis"</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_399" class="ocr_word" title="bbox 1738 3034 1985 3077">
+        <span id="w_398_1" class="ocr_word" title="bbox 1365 3034 1694 3090">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">notionibus</ins>
-            <del title="nlp 0.90">notionibus</del>
+            <ins class="alt" title="nlp 2.00">aegrotationis“</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 239 3103 1982 3162">
         <span id="w_400" class="ocr_word" title="bbox 239 3103 457 3160">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Bcriptoris</ins>
-            <del title="nlp 0.90">Bcriptoris</del>
+            <ins title="nlp 2.00">scriptoris</ins>
           </span>
         </span>
         <span id="w_401" class="ocr_word" title="bbox 489 3104 671 3146">
