--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0056.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0056.html
@@ -120,14 +120,24 @@
             <ins class="alt" title="nlp 1.00">φησιν</ins>
           </span>
         </span>
-        <span id="w_20" class="ocr_word" title="bbox 1534 444 1801 499" lang="grc">
+        <span id="w_20_0" class="ocr_word" title="bbox 1534 444 1801 499">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Ἱππόβοτος,</ins>
+            <ins class="alt" title="nlp 2.00">Ἱππόβοτος,</ins>
           </span>
         </span>
-        <span id="w_21" class="ocr_word" title="bbox 1823 444 2063 501" lang="grc">
+        <span id="w_20_1" class="ocr_word" title="bbox 1534 444 1801 499">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρ' ᾧ καὶ</ins>
+            <ins class="alt" title="nlp 2.00">παρ᾿</ins>
+          </span>
+        </span>
+        <span id="w_21_0" class="ocr_word" title="bbox 1823 444 2063 501">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ᾧ</ins>
+          </span>
+        </span>
+        <span id="w_21_1" class="ocr_word" title="bbox 1823 444 2063 501">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -177,9 +187,9 @@
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
           </span>
         </span>
-        <span id="w_31" class="ocr_word" title="bbox 1925 515 2065 559" lang="grc">
+        <span id="w_31_0" class="ocr_word" title="bbox 1925 515 2065 559">
           <span class="alternatives">
-            <ins title="nlp 2.00">Πολέ-</ins>
+            <ins class="alt" title="nlp 2.00">Πολέμωνα</ins>
           </span>
         </span>
       </span>
@@ -187,11 +197,6 @@
         <span id="w_32" class="ocr_word" title="bbox 294 604 310 630">
           <span class="alternatives">
             <ins title="nlp 2.00">5</ins>
-          </span>
-        </span>
-        <span id="w_33" class="ocr_word" title="bbox 332 603 457 642" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μωνα</ins>
           </span>
         </span>
         <span id="w_34" class="ocr_word" title="bbox 493 585 576 628" lang="grc">
@@ -323,19 +328,19 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_61" class="ocr_word" title="bbox 1581 734 1692 771" lang="grc">
+        <span id="w_61_0" class="ocr_word" title="bbox 1581 734 1692 771">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὐτἱͅ</ins>
+            <ins class="alt" title="nlp 2.00">αὐτῷ</ins>
+          </span>
+        </span>
+        <span id="w_61_1" class="ocr_word" title="bbox 1581 734 1692 771">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_62" class="ocr_word" title="bbox 1726 729 2001 772" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διαλεκτικὸν</ins>
-          </span>
-        </span>
-        <span id="w_63" class="ocr_word" title="bbox 2020 728 2068 772" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
       </span>
@@ -479,9 +484,14 @@
             <ins class="alt" title="nlp 2.00">στίχους</ins>
           </span>
         </span>
-        <span id="w_89_1" class="ocr_word" title="bbox 1436 942 2071 998">
+        <span id="w_89_1_0" class="ocr_word" title="bbox 1436 942 2071 998">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">μεταγράφειν</ins>
+            <ins class="alt" title="nlp 2.00">μεταγράφειν</ins>
+          </span>
+        </span>
+        <span id="w_89_1_1" class="ocr_word" title="bbox 1436 942 2071 998">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">οὕτω·</ins>
           </span>
         </span>
       </span>
@@ -632,9 +642,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_118" class="ocr_word" title="bbox 826 1226 892 1269">
+        <span id="w_118_0" class="ocr_word" title="bbox 826 1226 892 1269">
           <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
+            <ins class="alt" title="nlp 2.00">δι᾿</ins>
+          </span>
+        </span>
+        <span id="w_118_1" class="ocr_word" title="bbox 826 1226 892 1269">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_119" class="ocr_word" title="bbox 912 1243 1049 1270" lang="grc">
@@ -670,11 +685,6 @@
         <span id="w_125" class="ocr_word" title="bbox 1847 1243 1929 1283" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
-          </span>
-        </span>
-        <span id="w_126" class="ocr_word" title="bbox 1961 1223 2075 1270" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἶναι</ins>
           </span>
         </span>
       </span>
@@ -805,7 +815,7 @@
         </span>
         <span id="w_151" class="ocr_word" title="bbox 481 1440 581 1496" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">„καὶ </ins>
           </span>
         </span>
         <span id="w_152" class="ocr_word" title="bbox 614 1441 656 1483" lang="grc">
@@ -1020,14 +1030,24 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 563 1796 1865 1854">
-        <span id="w_192" class="ocr_word" title="bbox 563 1798 642 1841" lang="grc">
+        <span id="w_192_0" class="ocr_word" title="bbox 563 1798 642 1841">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
+            <ins class="alt" title="nlp 2.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_193" class="ocr_word" title="bbox 673 1796 904 1854" lang="grc">
+        <span id="w_192_1" class="ocr_word" title="bbox 563 1798 642 1841">
           <span class="alternatives">
-            <ins title="nlp 2.00">δ' οὔτ’ ἄρ</ins>
+            <ins class="alt" title="nlp 2.00">δ᾿</ins>
+          </span>
+        </span>
+        <span id="w_193_0" class="ocr_word" title="bbox 673 1796 904 1854">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">οὔτ᾿</ins>
+          </span>
+        </span>
+        <span id="w_193_1" class="ocr_word" title="bbox 673 1796 904 1854">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἂρ</ins>
           </span>
         </span>
         <span id="w_194" class="ocr_word" title="bbox 936 1813 1099 1853" lang="grc">
@@ -1566,9 +1586,14 @@
             <ins class="alt" title="nlp 1.00">35</ins>
           </span>
         </span>
-        <span id="w_298" class="ocr_word" title="bbox 356 2727 464 2768" lang="grc">
+        <span id="w_298_0" class="ocr_word" title="bbox 356 2727 464 2768">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐἴδει</ins>
+            <ins class="alt" title="nlp 2.00">εἴδει</ins>
+          </span>
+        </span>
+        <span id="w_298_1" class="ocr_word" title="bbox 356 2727 464 2768">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_299" class="ocr_word" title="bbox 485 2741 625 2783" lang="grc">
@@ -1624,11 +1649,6 @@
         <span id="w_309" class="ocr_word" title="bbox 1852 2722 1986 2765" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Ὀκτὼ</ins>
-          </span>
-        </span>
-        <span id="w_310" class="ocr_word" title="bbox 2007 2738 2089 2778" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
       </span>
@@ -1914,7 +1934,7 @@
         </span>
         <span id="w_363" class="ocr_word" title="bbox 472 3111 527 3145" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">24Ρ1.</ins>
+            <ins title="nlp 2.00">Ρ1.</ins>
           </span>
         </span>
         <span id="w_364" class="ocr_word" title="bbox 615 3114 660 3145">
